--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ allthenews_dataset/
 xtra/
 _site/
 *.sh
-_quarto.yml
+/_quarto.yml/
 assets/
-.audio/
-.insturctions/
+/.audio/
+/.instructions/
+_quarto.yml
